--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 absl-py
 autopep8
 graph-nets>=1.1
-tensorflow==1.15
 tensorflow-gpu==1.15
 numpy
 dm-sonnet<2
 tensorflow_probability<0.9
-sklearn
+scikit-learn
 dm-tree
 matplotlib
